# switchboot

./: .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  svgo.config.js  tsconfig.json  vite.config.js
.github/: copilot-instructions.md
.github/actions/authenticode-sign/: action.yml
.github/actions/create-tag/: action.yml
.github/actions/ensure-signtool/: action.yml
.github/actions/gpg-sign/: action.yml
.github/workflows/: linux-build.yml  release-pipeline.yml  sign-and-release.yml  update-repository.yml  windows-build.yml
firmware_variables/: Cargo.toml
firmware_variables/src/: boot.rs  lib.rs  load_option.rs  privileges.rs  utils.rs  variables.rs
firmware_variables/src/privileges/: windows.rs
firmware_variables/src/utils/: mod.rs
firmware_variables/src/variables/: mod.rs  unix.rs  windows.rs
repo-config/: index.html  switchboot.list  switchboot.repo
scripts/: check_tag_against_repo.py  generate_indexes.js  generate_latest_json.py  generate_release_body.py  prune_keep_two.sh  prune_repo.py
src/: app.css
src-tauri/: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.signed.conf.json  tauri.windows.conf.json
src-tauri/libs/firmware_variables/: Cargo.toml  README.md
src-tauri/libs/firmware_variables/examples/: boot_order.rs  discover_boot_entries.rs
src-tauri/libs/firmware_variables/src/: boot.rs  device_path.rs  lib.rs
src-tauri/libs/firmware_variables/src/privileges/: mod.rs  unix.rs  windows.rs
src-tauri/libs/firmware_variables/src/utils/: unix.rs  windows.rs
src-tauri/libs/firmware_variables/src/variables/: mod.rs
src-tauri/libs/named_pipe_ipc/: Cargo.toml  README.md  build.rs
src-tauri/libs/named_pipe_ipc/examples/: basic_communication.rs  encryption_options.rs  event_client.rs  event_driven_server.rs  multi_client_server.rs
src-tauri/libs/named_pipe_ipc/src/: client.rs  error.rs  lib.rs  server.rs  tests.rs
src-tauri/libs/win_service/: Cargo.toml
src-tauri/libs/win_service/src/: service.rs
src-tauri/libs/winservice_ipc/examples/: basic_ipc.rs  encrypted_ipc.rs
src-tauri/libs/winservice_ipc/src/: ipc_messaging.rs  ipc_server.rs  lib.rs  service.rs  winservice.rs
src-tauri/platform/linux/links/: switchboot-cli  switchboot-cli-nopass
src-tauri/platform/linux/polkit/: com.switchboot.cli.policy
src-tauri/platform/linux/polkit-1/actions/: com.switchboot.cli.policy
src-tauri/platform/windows/: build-portable.bat  build_portable.js  nsis-hooks.nsi  nsis-portable.nsi
src-tauri/polkit/: com.switchboot.cli.policy
src-tauri/src/: args_parser.rs  build_info.rs  cli.rs  cli_bin.rs  cli_client.rs  config.rs  constants.rs  lib.rs  main.rs  types.rs  types.rs.bak  windows.rs
src-tauri/src/binary/cli/: logic.rs  main.rs
src-tauri/src/binary/cli/windows/: mod.rs  pipe.rs  service.rs
src-tauri/src/cli/: constants.rs  logic.rs  main.rs  mod.rs  windows.rs
src-tauri/src/cli/windows/: MIGRATION_COMPLETE.md  crypto.rs  mod.rs  pipe.rs  psk.rs  service.rs  service_management.rs
src-tauri/src/cli_user/: daemon.rs  mod.rs  single_run.rs
src-tauri/src/types/: cli_args.rs  mod.rs
src-tauri/windows/: build-portable.bat  nsis-hooks.nsi  nsis-portable.nsi
src/lib/: iconMap.ts  orderManager.ts  types.ts
src/lib/components/: ApiService.svelte  BootEntriesContextMenu.ts  BootEntriesList.svelte  BootEntryItem.svelte  Button.svelte  Checkbox.svelte  CollapsibleSection.svelte  ContextMenu.svelte  ContextMenuItem.svelte  Header.svelte  Label.svelte  OsIcon.svelte  ShortcutDialog.svelte  UpdateDialog.svelte
src/lib/stores/: contextMenu.ts  undoRedo.ts
src/lib/utils/: bootEntryHelpers.ts  crossZoneDragManager.ts  smoothHeight.ts
src/routes/: +layout.svelte  +page.svelte  mockBootEntries.ts
tools/: prerender-icons.js
winservice_ipc/: Cargo.toml
winservice_ipc/src/: ipc_client.rs  ipc_messaging.rs  ipc_server.rs  lib.rs  main.rs  main.rs.bak  main_encryption.rs  server.rs.bak  winservice.rs
winservice_ipc/src/server/: windpapi.rs
