[package]
name = "switchboot"
version = "0.1.0"
description = "SwitchBoot lets you manage EFI boot entries on your machine."
authors = ["M Zidane"]
edition = "2021"
default-run = "switchboot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "switchboot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
rand = { version = "0.9", features = ["small_rng"] }
serde_json = "1"

[dependencies]
tauri = { version = "2.8.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
firmware_variables = { path = "./libs/firmware_variables" }
bincode = "1"
rand = { version = "0.9", features = ["small_rng"] }
log = "0.4.28"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
named_pipe_ipc = { path = "./libs/named_pipe_ipc" }
tokio = "1"
chacha20poly1305 = "0.10"
windows = { version = "0.61", features = ["Win32_System_Services"] }
windows-service = "0.8.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Optimization profile for release builds
[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
