[package]
name = "switchboot"
version = "0.2.4"
description = "SwitchBoot lets you manage EFI boot entries on your machine."
authors = ["M Zidane"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "switchboot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
rand = { version = "0.9" }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
firmware_variables = { git = "https://github.com/moooozi/firmware_variables", tag = "v0.1" }
bincode = "1"

[target.'cfg(windows)'.dependencies]
pipeguard = { git = "https://github.com/moooozi/pipeguard", tag = "v0.1" }
tokio = { version = "1", features = ["io-std"] }
windows = { version = "0.61", features = ["Win32_System_Services"] }
windows-service = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

# Optimization profile for release builds
[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
