[package]
name = "winservice_ipc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "winservice_ipc_demo"
path = "src/main.rs"

[dependencies]
signal-hook = "*"
windows = { version = "0.30", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Services"
] }
libloading = "0.8"
rand = { version = "0.9.2", features = ["small_rng"] }
log = "*"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"

[build-dependencies]
rand = { version = "0.9.2", features = ["small_rng"] }
