[package]
name = "firmware_variables"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.1"
uuid = "1.17.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Environment", "Win32_Security", "Win32_System_Threading", "Win32_System_WindowsProgramming"] }


[lib]
crate-type = ["cdylib", "rlib"]
