[package]
name = "named_pipe_ipc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
rand = "0.8"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chacha20poly1305 = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_communication"
path = "examples/basic_communication.rs"

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"

[[example]]
name = "json_communication"
path = "examples/json_communication.rs"

[[example]]
name = "multi_client_server"
path = "examples/multi_client_server.rs"

[[example]]
name = "interactive_client"
path = "examples/interactive_client.rs"

[[example]]
name = "event_driven_server"
path = "examples/event_driven_server.rs"

[[example]]
name = "event_client"
path = "examples/event_client.rs"

[[example]]
name = "simple_test"
path = "examples/simple_test.rs"

[[example]]
name = "direct_test"
path = "examples/direct_test.rs"
