[package]
name = "named_pipe_ipc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
rand = "0.8"

[dependencies]
tokio = { version = "1", features = ["macros", "time", "net", "io-std"] }
thiserror = "1"
chacha20poly1305 = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_communication"
path = "examples/basic_communication.rs"

[[example]]
name = "encryption_options"
path = "examples/encryption_options.rs"

[[example]]
name = "multi_client_server"
path = "examples/multi_client_server.rs"

[[example]]
name = "event_driven_server"
path = "examples/event_driven_server.rs"

