[package]
name = "win_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Services",
    "Win32_Security_Authorization",
] }
log = "*"
simplelog = "0.12"
